--- a/swe645-HW2/Jenkinsfile
+++ b/swe645-HW2/Jenkinsfile
@@ -23,12 +23,12 @@ environment{
          }
          }
          }
-         stage("Deploying to rancher"){
+         stage("Deploying to rancher as pod"){
          steps{
          sh 'kubectl set image deployment/stusurvey-pipeline stusurvey-pipeline=akhpng31/phani645:${BUILD_TIMESTAMP} -n jenkins-pipeline'
          }
          }
-         stage("Deploying to rancher")
+         stage("Deploying to rancher with load balancer")
          {
          steps{
          sh 'kubectl set image deployment/phani645-lb phani645-lb=akhpng31/phani645:${BUILD_TIMESTAMP} -n jenkins-pipeline'
